--- a/pc2-tasty-delights/index.html
+++ b/pc2-tasty-delights/index.html
@@ -1,1 +1,35 @@
 <!-- Write code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <figure>
+        <img src="./images/food-items.jpeg" width="300" height="300"
+    </figure>
+
+<h1>The Tasty Delights</h1>
+
+<hr>
+
+<h2>The Restaurant</h2>
+    <p>The Tasty Delights offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.</p>
+
+<h2>Catering</h2>
+
+<p>You have fun.. we'll handle the cooking. The Tasty Delights can handle events from snack for bridge club to elegant corporate fundraisers.</p>
+
+
+<h2>Location and Hours</h2>
+
+<p>
+    Lowell, Massachusetts; <br>
+    Monday through Saturday <time>11:00 AM</time> to <time>9:00PM</time>, <br>
+    Friday and Saturday, <time>11:00 AM</time> to midnight<br>
+</p>
+</body>
+</html>
